# knightwatch-kid

./: .gitignore  AGENTS.md  pyproject.toml
docs/superpowers/plans/: 2026-03-13-keepitdry.md
docs/superpowers/specs/: 2026-03-13-keepitdry-design.md
skill/: SKILL.md  skill.py
src/keepitdry/: __init__.py  cli.py  embeddings.py  indexer.py  parser.py  searcher.py  store.py
tests/: conftest.py  test_cli.py  test_embeddings.py  test_indexer.py  test_integration.py  test_parser.py  test_searcher.py  test_store.py
