[project]
name = "keepitdry"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "tree-sitter>=0.21",
    "tree-sitter-python>=0.21",
    "chromadb>=0.4",
    "requests>=2.31",
    "click>=8.0",
]

[dependency-groups]
dev = [
    "pytest>=7.0",
]

[project.scripts]
kid = "keepitdry.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/keepitdry"]

[tool.pytest.ini_options]
testpaths = ["tests"]
